Added footer to HTML, and Styled CSS

--- a/index.html
+++ b/index.html
@@ -73,8 +73,12 @@
   <button type="submit" class="btn btn-primary" id="city-submit-button">Search</button> 
     <button type="submit" class="btn btn-secondary" id="current-city-button">Current</button> 
 </form>
+ 
   </div>
+ 
 </div>
+<p class="footer"> <small>
+  <a href="https://github.com/henih/weather-app" target="_blank"> Open-source code</a>, by Henriett Horvath</small></p>
   <script src="javascript/script.js"></script>
   </body>
 </html>
