Updated getTime function

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <img src="images/budapest.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title" id= "current-city"> </h5>
-     <h4 class="card-title" id="current-time"> time</h4> 
+     <h4 class="card-title"> Last Updated: <span id="current-time"> </span></h4> 
        <h5 class="card-title">
          <h6 id="weather-description">Forecast for today</h6>
 <span class="current-temp" id="current-temp">
@@ -44,7 +44,7 @@
               Humidity: <span id="humidity"></span>%
             </li>
             <li >
-              Wind: <span id="wind" > </span>km/h
+              Wind: <span id="wind" > </span> km/h
             </li>
           </ul>
         </div>
