Added icon functionality

--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
        <h5 class="card-title">
          <h6 id="weather-description">Forecast for today</h6>
 <span class="current-temp" id="current-temp">
-🌞 <span class="current-degree" id="current-degree"> </span> 
+
+  <img
+  id="icon" 
+  src=""
+     />
+ <span class="current-degree" id="current-degree"> </span> 
 <span class="units">
   <a href="#" id="celsius-link">°C</a> |
   <a href="#" id="fahrenheit-link">°F</a>
