Added Celsius, Fahrenheit toggle function

--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
   <img
   id="icon" 
   src=""
-     />
+  
+   />
  <span class="current-degree" id="current-degree"> </span> 
 <span class="units">
-  <a href="#" id="celsius-link">°C</a> |
+  <a href="#" id="celsius-link" class="active">°C</a> |
   <a href="#" id="fahrenheit-link">°F</a>
 </span>
 
