--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="card" style="width: 30rem;">
         
 
-  <img src="images/budapest.jpg" class="card-img-top" alt="...">
+  <img src="images/budapest.jpg" class="card-img-top" alt="..." >
   <div class="card-body">
     <h5 class="card-title" id= "current-city"> </h5>
      <h4 class="card-title"> Last Updated: <span id="current-time"> </span></h4> 
@@ -36,8 +36,7 @@
    />
  <span class="current-degree" id="current-degree"> </span> 
 <span class="units">
-  <a href="#" id="celsius-link" class="active">°C</a> |
-  <a href="#" id="fahrenheit-link">°F</a>
+  <a href="#" id="celsius-link" class="active">°C</a> 
 </span>
 
   <div class="row">
